# scrooge

./: .gitignore  Cargo.toml  ETH
scripts/: sync_time.bat
src/: main.rs
