[package]
    name = "scrooge"
    version = "0.1.0"
    edition = "2021"

[dependencies]
    binance_spot_connector_rust = { git = "https://github.com/binance/binance-spot-connector-rust", features = ["enable-tokio-tungstenite", "enable-hyper"] }
    tokio = { version = "1", features = ["full"] }
    log = "0.4"
    env_logger = "0.10"
    serde = { version = "1.0", features = ["derive"] }
    serde_json = "1.0"
    futures-util = "0.3"
    config = "0.13"
    hyper = "0.14"
    hyper-tls = "0.5"
    chrono = "0.4"